5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1675_2471.log
== TEST (2019-04-29 16:01:44) 
-- CODE:
i= int(input("digite sua idade: "))
im= float(input("digite o indice de massa corporal: "))
if (i>0)and(i<=130)and(im>0):
	if (im<22)and(i<45):
		z="Baixo"
		print("Risco:",z)
	elif (im<22)and(i>=45):
		z="Medio"
		print("Risco:",z)
	elif (im>=22)and(i<45):
		z="Medio"
		print("Risco:",z)
	elif (im>=22)and(i>=45):
		z="Alto"
		print("Risco:",z)
else:
	print("Entradas:",X,"anos e IMC",Y)
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Entradas:",X,"anos e IMC",Y)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:02:36) 
-- CODE:
i= int(input("digite sua idade: "))
im= float(input("digite o indice de massa corporal: "))
if (i>0)and(i<=130)and(im>0):
	if (im<22)and(i<45):
		z="Baixo"
		print("Entradas:",X,"anos e IMC",Y)
		print("Risco:",z)
	elif (im<22)and(i>=45):
		z="Medio"
		print("Entradas:",X,"anos e IMC",Y)
		print("Risco:",z)
	elif (im>=22)and(i<45):
		z="Medio"
		print("Entradas:",X,"anos e IMC",Y)
		print("Risco:",z)
	elif (im>=22)and(i>=45):
		z="Alto"
		print("Entradas:",X,"anos e IMC",Y)
		print("Risco:",z)
else:
	print("Entradas:",X,"anos e IMC",Y)
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Entradas:",X,"anos e IMC",Y)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:03:20) 
-- CODE:
i= int(input("digite sua idade: "))
im= float(input("digite o indice de massa corporal: "))
if (i>0)and(i<=130)and(im>0):
	if (im<22)and(i<45):
		z="Baixo"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im<22)and(i>=45):
		z="Medio"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im>=22)and(i<45):
		z="Medio"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im>=22)and(i>=45):
		z="Alto"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
else:
	print("Entradas:",i,"anos e IMC",im)
	print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:03:33) 
-- CODE:
i= int(input("digite sua idade: "))
im= float(input("digite o indice de massa corporal: "))
if (i>0)and(i<=130)and(im>0):
	if (im<22)and(i<45):
		z="Baixo"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im<22)and(i>=45):
		z="Medio"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im>=22)and(i<45):
		z="Medio"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
	elif (im>=22)and(i>=45):
		z="Alto"
		print("Entradas:",i,"anos e IMC",im)
		print("Risco:",z)
else:
	print("Entradas:",i,"anos e IMC",im)
	print("Dados invalidos")
-- EXECUTION TIME:
0.186237
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
